notifications, mode, fix-input, add trigger

--- a/server/admin-dashboard/pages/sign-up.html
+++ b/server/admin-dashboard/pages/sign-up.html
@@ -2,42 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link
-      rel="apple-touch-icon"
-      sizes="76x76"
-      href="../assets/img/apple-icon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <link rel="apple-touch-icon" sizes="76x76" href="../assets/img/apple-icon.png" />
     <link rel="icon" type="image/png" href="../assets/img/favicon.png" />
     <title>Anime Dashboard</title>
     <!--     Fonts and icons     -->
     <link
       rel="stylesheet"
       type="text/css"
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700" />
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700"
+    />
     <!-- Nucleo Icons -->
     <link href="../assets/css/nucleo-icons.css" rel="stylesheet" />
     <link href="../assets/css/nucleo-svg.css" rel="stylesheet" />
     <!-- Font Awesome Icons -->
-    <script
-      src="https://kit.fontawesome.com/42d5adcbca.js"
-      crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
     <!-- Material Icons -->
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons+Round"
-      rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet" />
     <!-- CSS Files -->
-    <link
-      id="pagestyle"
-      href="../assets/css/material-dashboard.css?v=3.0.5"
-      rel="stylesheet" />
+    <link id="pagestyle" href="../assets/css/material-dashboard.css?v=3.0.5" rel="stylesheet" />
     <!-- Nepcha Analytics (nepcha.com) -->
     <!-- Nepcha is a easy-to-use web analytics. No cookies and fully compliant with GDPR, CCPA and PECR. -->
-    <script
-      defer
-      data-site="YOUR_DOMAIN_HERE"
-      src="https://api.nepcha.com/js/nepcha-analytics.js"></script>
+    <script defer data-site="YOUR_DOMAIN_HERE" src="https://api.nepcha.com/js/nepcha-analytics.js"></script>
   </head>
 
   <body class="">
@@ -46,11 +32,10 @@
         <div class="col-12">
           <!-- Navbar -->
           <nav
-            class="navbar navbar-expand-lg blur border-radius-lg top-0 z-index-3 shadow position-absolute mt-4 py-2 start-0 end-0 mx-4">
+            class="navbar navbar-expand-lg blur border-radius-lg top-0 z-index-3 shadow position-absolute mt-4 py-2 start-0 end-0 mx-4"
+          >
             <div class="container-fluid ps-2 pe-0">
-              <a
-                class="navbar-brand font-weight-bolder ms-lg-0 ms-3"
-                href="../pages/dashboard.html">
+              <a class="navbar-brand font-weight-bolder ms-lg-0 ms-3" href="../pages/dashboard.html">
                 Anime Dashboard
               </a>
               <button
@@ -60,7 +45,8 @@
                 data-bs-target="#navigation"
                 aria-controls="navigation"
                 aria-expanded="false"
-                aria-label="Toggle navigation">
+                aria-label="Toggle navigation"
+              >
                 <span class="navbar-toggler-icon mt-2">
                   <span class="navbar-toggler-bar bar1"></span>
                   <span class="navbar-toggler-bar bar2"></span>
@@ -73,15 +59,15 @@
                     <a
                       class="nav-link d-flex align-items-center me-2 active"
                       aria-current="page"
-                      href="../pages/dashboard.html">
+                      href="../pages/dashboard.html"
+                    >
                       <i class="fa fa-chart-pie opacity-6 text-dark me-1"></i>
                       Dashboard
                     </a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link me-2" href="../pages/sign-up.html">
-                      <i
-                        class="fas fa-user-circle opacity-6 text-dark me-1"></i>
+                      <i class="fas fa-user-circle opacity-6 text-dark me-1"></i>
                       Sign Up
                     </a>
                   </li>
@@ -115,23 +101,22 @@
           <div class="container">
             <div class="row">
               <div
-                class="col-6 d-lg-flex d-none h-100 my-auto pe-0 position-absolute top-0 start-0 text-center justify-content-center flex-column">
+                class="col-6 d-lg-flex d-none h-100 my-auto pe-0 position-absolute top-0 start-0 text-center justify-content-center flex-column"
+              >
                 <div
                   class="position-relative bg-gradient-primary h-100 m-3 px-7 border-radius-lg d-flex flex-column justify-content-center"
                   style="
                     background-image: url('../assets/img/illustrations/Demon-Slayer-the-Movie-Mugen-Train-cropped-poster.png');
                     background-size: cover;
                     filter: brightness(50%);
-                  "></div>
+                  "
+                ></div>
               </div>
-              <div
-                class="col-xl-4 col-lg-5 col-md-7 d-flex flex-column ms-auto me-auto ms-lg-auto me-lg-5">
+              <div class="col-xl-4 col-lg-5 col-md-7 d-flex flex-column ms-auto me-auto ms-lg-auto me-lg-5">
                 <div class="card card-plain">
                   <div class="card-header">
                     <h4 class="font-weight-bolder">Sign Up</h4>
-                    <p class="mb-0">
-                      Enter your email and password to register
-                    </p>
+                    <p class="mb-0">Enter your email and password to register</p>
                   </div>
                   <div class="card-body">
                     <form role="form">
@@ -148,25 +133,14 @@
                         <input type="password" class="form-control" />
                       </div>
                       <div class="form-check form-check-info text-start ps-0">
-                        <input
-                          class="form-check-input"
-                          type="checkbox"
-                          value=""
-                          id="flexCheckDefault"
-                          checked />
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" checked />
                         <label class="form-check-label" for="flexCheckDefault">
                           I agree the
-                          <a
-                            href="javascript:;"
-                            class="text-dark font-weight-bolder"
-                            >Terms and Conditions</a
-                          >
+                          <a href="javascript:;" class="text-dark font-weight-bolder">Terms and Conditions</a>
                         </label>
                       </div>
                       <div class="text-center">
-                        <button
-                          type="button"
-                          class="btn btn-lg bg-gradient-primary btn-lg w-100 mt-4 mb-0">
+                        <button type="button" class="btn btn-lg bg-gradient-primary btn-lg w-100 mt-4 mb-0">
                           Sign Up
                         </button>
                       </div>
@@ -175,11 +149,7 @@
                   <div class="card-footer text-center pt-0 px-lg-2 px-1">
                     <p class="mb-2 text-sm mx-auto">
                       Already have an account?
-                      <a
-                        href="../pages/sign-in.html"
-                        class="text-primary text-gradient font-weight-bold"
-                        >Sign in</a
-                      >
+                      <a href="../pages/sign-in.html" class="text-primary text-gradient font-weight-bold">Sign in</a>
                     </p>
                   </div>
                 </div>
@@ -192,20 +162,41 @@
     <!--   Core JS Files   -->
     <script src="../assets/js/core/popper.min.js"></script>
     <script src="../assets/js/core/bootstrap.min.js"></script>
-    <script src="../assets/js/plugins/perfect-scrollbar.min.js"></script>
-    <script src="../assets/js/plugins/smooth-scrollbar.min.js"></script>
     <script>
-      var win = navigator.platform.indexOf("Win") > -1;
-      if (win && document.querySelector("#sidenav-scrollbar")) {
-        var options = {
-          damping: "0.5",
-        };
-        Scrollbar.init(document.querySelector("#sidenav-scrollbar"), options);
+      window.onload = function () {
+        // Material Design Input function
+        var inputs = document.querySelectorAll('input')
+
+        for (var i = 0; i < inputs.length; i++) {
+          inputs[i].addEventListener(
+            'focus',
+            function (e) {
+              this.parentElement.classList.add('is-focused')
+            },
+            false
+          )
+
+          inputs[i].onkeyup = function (e) {
+            if (this.value != '') {
+              console.log(this.parentElement)
+              this.parentElement.classList.add('is-filled')
+            } else {
+              this.parentElement.classList.remove('is-filled')
+            }
+          }
+
+          inputs[i].addEventListener(
+            'focusout',
+            function (e) {
+              if (this.value != '') {
+                this.parentElement.classList.add('is-filled')
+              }
+              this.parentElement.classList.remove('is-focused')
+            },
+            false
+          )
+        }
       }
     </script>
-    <!-- Github buttons -->
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
-    <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
-    <script src="../assets/js/material-dashboard.min.js?v=3.0.5"></script>
   </body>
 </html>
