--- a/server/admin-dashboard/pages/sign-in.html
+++ b/server/admin-dashboard/pages/sign-in.html
@@ -110,14 +110,14 @@
                   </div>
                 </div>
               </div>
-              <div class="card-body">
+              <div class="card-body"> 
                 <form role="form" class="text-start">
                   <div class="input-group input-group-outline my-3">
                     <label class="form-label">Email</label>
                     <input type="email" class="form-control">
                   </div>
                   <div class="input-group input-group-outline mb-3">
-                    <label class="form-label">Password</label>
+                    <label class="form-label">Password</label> 
                     <input type="password" class="form-control">
                   </div>
                   <div class="form-check form-switch d-flex align-items-center mb-3">
@@ -158,21 +158,33 @@
   <!--   Core JS Files   -->
   <script src="../assets/js/core/popper.min.js"></script>
   <script src="../assets/js/core/bootstrap.min.js"></script>
-  <script src="../assets/js/plugins/perfect-scrollbar.min.js"></script>
-  <script src="../assets/js/plugins/smooth-scrollbar.min.js"></script>
   <script>
-    var win = navigator.platform.indexOf('Win') > -1;
-    if (win && document.querySelector('#sidenav-scrollbar')) {
-      var options = {
-        damping: '0.5'
-      }
-      Scrollbar.init(document.querySelector('#sidenav-scrollbar'), options);
-    }
+    window.onload = function() {
+      // Material Design Input function
+      var inputs = document.querySelectorAll('input');
+
+      for (var i = 0; i < inputs.length; i++) {
+        inputs[i].addEventListener('focus', function(e) {
+          this.parentElement.classList.add('is-focused');
+        }, false);
+
+        inputs[i].onkeyup = function(e) {
+          if (this.value != "") {
+            console.log(this.parentElement)
+            this.parentElement.classList.add('is-filled');
+          } else {
+            this.parentElement.classList.remove('is-filled');
+          }
+        };
+
+        inputs[i].addEventListener('focusout', function(e) {
+          if (this.value != "") {
+            this.parentElement.classList.add('is-filled');
+          }
+          this.parentElement.classList.remove('is-focused');
+        }, false);
+      }}
   </script>
-  <!-- Github buttons -->
-  <script async defer src="https://buttons.github.io/buttons.js"></script>
-  <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
-  <script src="../assets/js/material-dashboard.min.js?v=3.0.5"></script>
 </body>
 
 </html>
