--- a/server/admin-dashboard/pages/filmEdit.html
+++ b/server/admin-dashboard/pages/filmEdit.html
@@ -265,16 +265,12 @@
                       <input name="director" type="text" class="form-control" />
                     </div>
                     <div class="input-group input-group-outline mb-3 is-filled">
-                      <label class="form-label">Input current episode...</label>
-                      <input name="episodeCurrent" type="number" class="form-control" min="0"/>
-                    </div>
-                    <div class="input-group input-group-outline mb-3 is-filled">
                       <label class="form-label">Input total episode...</label>
                       <input name="episodeTotal" type="number" class="form-control" min="0" max="9999"/>
                     </div>
                     <div class="input-group input-group-outline mb-3 is-filled">
                       <label class="form-label">Input debut year...</label>
-                      <input id="year-debut-input" name="debutYear" type="number" class="form-control" min="1800" max=""/>
+                      <input id="released-input" name="released" type="date" class="form-control" min="1800-01-01" max="2023-06-03"/>
                     </div>
                     <select id="select_form_country" name="country" class="form-select input-group-outline mb-3 is-filled px-2">
                     </select>
@@ -503,7 +499,6 @@
       const thumbUrlInput = document.querySelector("input[name='thumbUrl']");
       const trailerUrlInput = document.querySelector("input[name='trailerUrl']");
       const posterUrlInput = document.querySelector("input[name='posterUrl']");
-      const episodeCurrentInput = document.querySelector("input[name='episodeCurrent']");
       const episodeTotalInput = document.querySelector("input[name='episodeTotal']");
       const timeUNEInput = document.querySelector("input[name='timeUNE']");
       const slugInput = document.querySelector("input[name='slug']");
@@ -518,9 +513,11 @@
         Scrollbar.init(document.querySelector("#sidenav-scrollbar"), options);
       }
 
-      const yearInput = document.getElementById("year-debut-input");
-      const currentYear = new Date().getFullYear();
-      yearInput.setAttribute("max", currentYear);
+      const releasedInput = document.getElementById("released-input");
+      let currentDay = new Date();
+      currentDay.setDate(currentDay.getDate() + 1);
+      currentDay = currentDay.toISOString().split('T')[0];
+      releasedInput.setAttribute("max", currentDay);
 
       const urlParams = new URLSearchParams(window.location.search)
       const id = urlParams.get("id")
@@ -600,17 +597,18 @@
         await fetch("http://localhost:8000/api/film/edit?id="+id)
           .then((response) => response.json())
           .then(async (result) => {
+            const releasedGet = result.released?.split('T')[0];
+            if(releasedGet) releasedInput.value = releasedGet;
+
             nameInput.value = result.filmName;
             originNameInput.value = result.originName;
             statusInput.checked = result.status;
             thumbUrlInput.value = result.thurmUrl;
             trailerUrlInput.value = result.trailerUrl;
             posterUrlInput.value = result.posterUrl;
-            episodeCurrentInput.value = result.episodeCurrent;
             episodeTotalInput.value = result.episodeTotal;
             timeUNEInput.value = result.timeUNE;
             slugInput.value = result.slug;
-            yearInput.value = result.debutYear;
             directorInput.value = result.director
             descriptionInput.value = result.description
             fetch("http://localhost:8000/api/country/")
@@ -680,20 +678,19 @@
         const result = confirm("Are you sure you want to update this film?");
         if(result)  {
           // Lấy giá trị của các trường dữ liệu
-          const filmName = nameInput.value;
-          const originName = originNameInput.value;
+          const filmName = nameInput.value.trim();
+          const originName = originNameInput.value.trim();
           const status =  statusInput.checked;
-          const thumbUrl =  thumbUrlInput.value;
-          const trailerUrl =  trailerUrlInput.value;
-          const posterUrl =  posterUrlInput.value;
-          const episodeCurrent =  episodeCurrentInput.value;
+          const thumbUrl =  thumbUrlInput.value.trim();
+          const trailerUrl =  trailerUrlInput.value.trim();
+          const posterUrl =  posterUrlInput.value.trim();
           const episodeTotal =  episodeTotalInput.value;
-          const timeUNE =  timeUNEInput.value;
-          const debutYear =  yearInput.value;
-          const slug =  slugInput.value;
-          const director =  directorInput.value;
+          const timeUNE =  timeUNEInput.value.trim();
+          const released =  releasedInput.value;
+          const slug =  slugInput.value.trim();
+          const director =  directorInput.value.trim();
           const country = selectFormCountry.value;
-          const description = descriptionInput.value;
+          const description = descriptionInput.value.trim();
           // Tạo đối tượng dữ liệu để gửi đến API
           const data = {
             id,
@@ -703,10 +700,9 @@
             thumbUrl,
             trailerUrl,
             posterUrl,
-            episodeCurrent,
             episodeTotal,
             timeUNE,
-            debutYear,
+            released,
             slug,
             director ,
             country ,
