--- a/server/admin-dashboard/pages/categoryEdit.html
+++ b/server/admin-dashboard/pages/categoryEdit.html
@@ -92,6 +92,15 @@
             </a>
           </li>
           <li class="nav-item">
+            <a class="nav-link text-white" href="../pages/series.html">
+              <div
+                class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+                <i class="material-icons opacity-10">subscriptions</i>
+              </div>
+              <span class="nav-link-text ms-1">Series</span>
+            </a>
+          </li>
+          <li class="nav-item">
             <a
               class="nav-link active text-white bg-gradient-primary"
               href="../pages/category.html">
@@ -223,7 +232,7 @@
                 class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
                 <div
                   class="bg-gradient-primary shadow-primary border-radius-lg pt-4 pb-3 d-flex align-items-center">
-                  <h6 class="text-white text-capitalize ps-3 me-auto">Create Episode</h6>
+                  <h6 class="text-white text-capitalize ps-3 me-auto">Create Category</h6>
                   <span><a
                     class="btn btn-outline-white btn-sm mb-0 me-3"
                     href="./category.html"
