--- a/server/admin-dashboard/pages/episodePreview.html
+++ b/server/admin-dashboard/pages/episodePreview.html
@@ -94,6 +94,15 @@
             </a>
           </li>
           <li class="nav-item">
+            <a class="nav-link text-white" href="../pages/series.html">
+              <div
+                class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+                <i class="material-icons opacity-10">subscriptions</i>
+              </div>
+              <span class="nav-link-text ms-1">Series</span>
+            </a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link text-white" href="../pages/category.html">
               <div
                 class="text-white text-center me-2 d-flex align-items-center justify-content-center">
@@ -233,7 +242,8 @@
                   marginheight="0" 
                   scrolling="no" 
                   width="832" 
-                  height="468" 
+                  height="468"
+                  class="rounded" 
                   allowfullscreen>
                 </iframe>
                 </div>
