--- a/server/admin-dashboard/pages/filmEdit.html
+++ b/server/admin-dashboard/pages/filmEdit.html
@@ -94,6 +94,15 @@
             </a>
           </li>
           <li class="nav-item">
+            <a class="nav-link text-white" href="../pages/series.html">
+              <div
+                class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+                <i class="material-icons opacity-10">subscriptions</i>
+              </div>
+              <span class="nav-link-text ms-1">Series</span>
+            </a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link text-white" href="../pages/category.html">
               <div
                 class="text-white text-center me-2 d-flex align-items-center justify-content-center">
@@ -269,10 +278,15 @@
                       <input name="episodeTotal" type="number" class="form-control" min="0" max="9999"/>
                     </div>
                     <div class="input-group input-group-outline mb-3 is-filled">
-                      <label class="form-label">Input debut year...</label>
+                      <label class="form-label">Input part film...</label>
+                      <input name="part" type="text" class="form-control"/>
+                    </div>
+                    <div class="input-group input-group-outline mb-3">
                       <input id="released-input" name="released" type="date" class="form-control" min="1800-01-01" max="2023-06-03"/>
                     </div>
-                    <select id="select_form_country" name="country" class="form-select input-group-outline mb-3 is-filled px-2">
+                    <select id="select_form_series_film" name="series" class="form-select input-group-outline mb-3 px-2">
+                    </select>
+                    <select id="select_form_country" name="country" class="form-select input-group-outline mb-3 px-2">
                     </select>
                     <div class="input-group input-group-outline mb-3 is-filled">
                       <textarea name="description" class="form-control" placeholder="Input description..." rows="4"></textarea>
@@ -489,6 +503,7 @@
       const navbarFixedCheckBox = document.getElementById("navbarFixed")
       const darkCheckBox = document.getElementById("dark-version")
       const selectFormCountry = document.querySelector("#select_form_country");
+      const selectFormSeriesFilm = document.querySelector("#select_form_series_film");
       const toastErrContent = document.querySelector("#dangerToast .toast-body")
 
       // Lấy đối tượng form và các trường dữ liệu trong form
@@ -503,6 +518,7 @@
       const timeUNEInput = document.querySelector("input[name='timeUNE']");
       const slugInput = document.querySelector("input[name='slug']");
       const directorInput = document.querySelector("input[name='director']");
+      const partInput = document.querySelector("input[name='part']");
       const descriptionInput = document.querySelector("textarea[name='description']");
 
       var win = navigator.platform.indexOf("Win") > -1;
@@ -610,7 +626,27 @@
             timeUNEInput.value = result.timeUNE;
             slugInput.value = result.slug;
             directorInput.value = result.director
+            partInput.value = result.part
             descriptionInput.value = result.description
+
+            fetch("http://localhost:8000/api/series/")
+            .then((response) => response.json())
+            .then((series) => {
+              console.log(result);
+              let html ='<option selected>Select the series film</option>';
+              series.forEach((s) => {
+                if(s.id === result.seriesId) html += `<option value='${s.id}' selected>${s.seriesName}</option>`
+                else html += `<option value='${s.id}'>${s.seriesName}</option>`
+              });
+              selectFormSeriesFilm.innerHTML = html;
+            })
+            .catch(err => {
+              toastErrContent.innerHTML = "An error occurred while connecting to the server";
+                showErrToast();
+                setTimeout(() => {
+                  hideErrToast();
+                }, 2000)
+            })
             fetch("http://localhost:8000/api/country/")
               .then((response) => response.json())
               .then((countries) => {
@@ -689,7 +725,9 @@
           const released =  releasedInput.value;
           const slug =  slugInput.value.trim();
           const director =  directorInput.value.trim();
+          const part =  partInput.value.trim();
           const country = selectFormCountry.value;
+          const series = selectFormSeriesFilm.value;
           const description = descriptionInput.value.trim();
           // Tạo đối tượng dữ liệu để gửi đến API
           const data = {
@@ -706,6 +744,8 @@
             slug,
             director ,
             country ,
+            part,
+            series,
             description 
           };
   
