--- a/server/admin-dashboard/pages/filmCreate.html
+++ b/server/admin-dashboard/pages/filmCreate.html
@@ -288,6 +288,16 @@
                     </select>
                     <select id="select_form_country" name="country" class="form-select input-group-outline mb-3 px-2">
                     </select>
+                    <div class="accordion-item btn-outline-warning">
+                      <h2 class="accordion-header" id="headingOne">
+                        <button class="accordion-button btn-outline-warning mb-3 m-0" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                          Select Categories
+                        </button>
+                      </h2>
+                      <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                        <div id="category-list" class="accordion-body form-check btn-outline-warning"></div>
+                      </div>
+                    </div>
                     <div class="input-group input-group-outline mb-3">
                       <textarea name="description" class="form-control" placeholder="Input description..." rows="4"></textarea>
                     </div>
@@ -505,6 +515,7 @@
       const selectFormCountry = document.querySelector("#select_form_country");
       const selectFormSeriesFilm = document.querySelector("#select_form_series_film");
       const toastErrContent = document.querySelector("#dangerToast .toast-body")
+      const categoryList = document.getElementById('category-list');
 
       var win = navigator.platform.indexOf("Win") > -1;
       if (win && document.querySelector("#sidenav-scrollbar")) {
@@ -577,7 +588,6 @@
         errToast.classList.remove("show");
       };
 
-
       //Load data start
       window.addEventListener("load", () => {
         let animeMode = JSON.parse(localStorage.getItem('ani-admin-mode'));
@@ -609,6 +619,32 @@
                 hideErrToast();
               }, 2000)
           })
+          fetch('http://localhost:8000/api/category')
+            .then(response => response.json())
+            .then(categories => {
+              categories.forEach(category => {
+                const checkbox = document.createElement('input');
+                checkbox.type = 'checkbox';
+                checkbox.name = 'categories';
+                checkbox.value = category.id;
+                checkbox.id = 'category-' + category.id;
+                checkbox.dataset.name = category.categoryName;
+                checkbox.classList.add('form-check-input')
+
+                const label = document.createElement('label');
+                label.htmlFor = 'category-' + category.id;
+                label.textContent = category.categoryName;
+                label.classList.add('form-check-label')
+
+                categoryList.appendChild(checkbox);
+                categoryList.appendChild(label);
+                categoryList.appendChild(document.createElement('br'));
+              });
+            })
+            .catch(error => {
+              console.log(error);
+            });
+
         fetch("http://localhost:8000/api/country/")
           .then((response) => response.json())
           .then((result) => {
@@ -703,8 +739,9 @@
           const country = selectFormCountry.value;
           const series = selectFormSeriesFilm.value;
           const description = descriptionInput.value.trim();
+          //get categories
+          let categories = Array.from(categoryList.querySelectorAll('input[name="categories"]:checked')).map(category => parseInt(category.value));
           // Tạo đối tượng dữ liệu để gửi đến API
-          console.log(releasedInput.value);
           const data = {
             filmName,
             originName,
@@ -720,7 +757,8 @@
             part,
             country,
             series,
-            description
+            description,
+            categories
           };
 
   
