--- a/server/admin-dashboard/pages/filmEdit.html
+++ b/server/admin-dashboard/pages/filmEdit.html
@@ -609,18 +609,35 @@
       //Load data start
       window.addEventListener("load", async () => {
         let animeMode = JSON.parse(localStorage.getItem('ani-admin-mode'));
-        badgeColors.forEach((b) => {
-          if(b.getAttribute("data-color") === animeMode['badge-color']) 
-            b.click(this);
-        })
-        sideBarTypes.forEach((sb) => {
-          if(sb.getAttribute("data-class") === animeMode['sidebar-type']) 
-            sb.click(this);
-        }) 
-        if(animeMode['navbar-fixed'] == "none") 
-          navbarFixedCheckBox.click();
-        if(animeMode['dark-mode'] == "dark") 
-          darkCheckBox.click();
+        if (animeMode) {
+          if (animeMode['badge-color']) {
+            badgeColors.forEach((b) => {
+              if (b.getAttribute("data-color") === animeMode['badge-color']) {
+                b.click();
+              }
+            });
+          }
+
+          if (animeMode['sidebar-type']) {
+            sideBarTypes.forEach((sb) => {
+              if (sb.getAttribute("data-class") === animeMode['sidebar-type']) {
+                sb.click();
+              }
+            });
+          }
+
+          if (animeMode['navbar-fixed']) {
+            if (animeMode['navbar-fixed'] === "none") {
+              navbarFixedCheckBox.click();
+            }
+          }
+
+          if (animeMode['dark-mode']) {
+            if (animeMode['dark-mode'] === "dark") {
+              darkCheckBox.click();
+            }
+          }
+        }
         await fetch("http://localhost:8000/api/film/edit?id="+id)
           .then((response) => response.json())
           .then(async (result) => {
