--- a/server/admin-dashboard/pages/sign-in.html
+++ b/server/admin-dashboard/pages/sign-in.html
@@ -10,7 +10,8 @@
     Anime Dashboard
   </title>
   <!--     Fonts and icons     -->
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700" />
+  <link rel="stylesheet" type="text/css"
+    href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700" />
   <!-- Nucleo Icons -->
   <link href="../assets/css/nucleo-icons.css" rel="stylesheet" />
   <link href="../assets/css/nucleo-svg.css" rel="stylesheet" />
@@ -30,12 +31,15 @@
     <div class="row">
       <div class="col-12">
         <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg blur border-radius-xl top-0 z-index-3 shadow position-absolute my-3 py-2 start-0 end-0 mx-4">
+        <nav
+          class="navbar navbar-expand-lg blur border-radius-xl top-0 z-index-3 shadow position-absolute my-3 py-2 start-0 end-0 mx-4">
           <div class="container-fluid ps-2 pe-0">
             <a class="navbar-brand font-weight-bolder ms-lg-0 ms-3 " href="../pages/dashboard.html">
               Anime Dashboard
             </a>
-            <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse"
+              data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false"
+              aria-label="Toggle navigation">
               <span class="navbar-toggler-icon mt-2">
                 <span class="navbar-toggler-bar bar1"></span>
                 <span class="navbar-toggler-bar bar2"></span>
@@ -45,7 +49,8 @@
             <div class="collapse navbar-collapse" id="navigation">
               <ul class="navbar-nav mx-auto">
                 <li class="nav-item">
-                  <a class="nav-link d-flex align-items-center me-2 active" aria-current="page" href="../pages/dashboard.html">
+                  <a class="nav-link d-flex align-items-center me-2 active" aria-current="page"
+                    href="../pages/dashboard.html">
                     <i class="fa fa-chart-pie opacity-6 text-dark me-1"></i>
                     Dashboard
                   </a>
@@ -65,9 +70,9 @@
               </ul>
               <ul class="navbar-nav d-lg-flex d-none">
                 <li class="nav-item d-flex align-items-center">
-                  <a class="btn btn-outline-primary btn-sm mb-0 me-2" target="_blank" 
-                  href="https://ninCode2907.github.io/introMyself">
-                  View Profile</a>
+                  <a class="btn btn-outline-primary btn-sm mb-0 me-2" target="_blank"
+                    href="https://ninCode2907.github.io/introMyself">
+                    View Profile</a>
                 </li>
               </ul>
             </div>
@@ -78,10 +83,12 @@
     </div>
   </div>
   <main class="main-content  mt-0">
-    <div class="page-header align-items-start min-vh-100" style="background-image: url('https://images.unsplash.com/photo-1497294815431-9365093b7331?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1950&q=80');">
+    <div class="page-header align-items-start min-vh-100"
+      style="background-image: url('https://images.unsplash.com/photo-1497294815431-9365093b7331?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1950&q=80');">
       <span class="mask bg-gradient-dark opacity-6"></span>
       <div class="container my-auto position-relative">
-        <video playsinline autoplay muted controls loop poster="../assets/img/illustrations/poster-sign-in.jpeg" class="video-signin">
+        <video playsinline autoplay muted controls loop poster="../assets/img/illustrations/poster-sign-in.jpeg"
+          class="video-signin">
           <source src="../assets/videos/sign-in.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
@@ -110,14 +117,14 @@
                   </div>
                 </div>
               </div>
-              <div class="card-body"> 
+              <div class="card-body">
                 <form role="form" class="text-start">
                   <div class="input-group input-group-outline my-3">
                     <label class="form-label">Email</label>
                     <input type="email" class="form-control">
                   </div>
                   <div class="input-group input-group-outline mb-3">
-                    <label class="form-label">Password</label> 
+                    <label class="form-label">Password</label>
                     <input type="password" class="form-control">
                   </div>
                   <div class="form-check form-switch d-flex align-items-center mb-3">
@@ -142,16 +149,15 @@
       <footer class="footer position-absolute bottom-2 py-2 w-100">
         <div class="container">
           <div class="align-items-center justify-content-lg-between">
-              <div
-                class="copyright my-auto text-center text-sm text-white text-lg-center">
-                Copyright © in 
-                <script>
-                  document.write(new Date().getFullYear());
-                </script>
-                by 
-                <h6 class="text-sm d-inline-block">NinBui</h6>
+            <div class="copyright my-auto text-center text-sm text-white text-lg-center">
+              Copyright © in
+              <script>
+                document.write(new Date().getFullYear());
+              </script>
+              by
+              <h6 class="text-sm d-inline-block">NinBui</h6>
             </div>
-        </div>
+          </div>
       </footer>
     </div>
   </main>
@@ -159,16 +165,16 @@
   <script src="../assets/js/core/popper.min.js"></script>
   <script src="../assets/js/core/bootstrap.min.js"></script>
   <script>
-    window.onload = function() {
+    window.onload = function () {
       // Material Design Input function
       var inputs = document.querySelectorAll('input')
 
       for (var i = 0; i < inputs.length; i++) {
-        inputs[i].addEventListener('focus', function(e) {
+        inputs[i].addEventListener('focus', function (e) {
           this.parentElement.classList.add('is-focused');
         }, false);
 
-        inputs[i].onkeyup = function(e) {
+        inputs[i].onkeyup = function (e) {
           if (this.value != "") {
             console.log(this.parentElement)
             this.parentElement.classList.add('is-filled');
@@ -177,13 +183,14 @@
           }
         };
 
-        inputs[i].addEventListener('focusout', function(e) {
+        inputs[i].addEventListener('focusout', function (e) {
           if (this.value != "") {
             this.parentElement.classList.add('is-filled');
           }
           this.parentElement.classList.remove('is-focused');
         }, false);
-      }}
+      }
+    }
   </script>
 </body>
 
